--- a/ui/static/css/sheet.css
+++ b/ui/static/css/sheet.css
@@ -1086,7 +1086,7 @@ input.custom:focus {
     cursor: pointer;
 }
 
-@media (max-width: 1440px) {
+@container character-sheet-container (max-width: 1200px) {
     .container {
         justify-content: flex-start;
     }
